<resources>
    <string name="app_name">Real S.A.</string>

    <string name="title_activity_menu">MenuActivity</string>

    <string name="lbl_option_camera">Escanear Código</string>

    <string name="lbl_timeline">Timeline</string>

    <string name="lbl_option_histories">Mostrar Historial</string>

    <string name="lbl_option_create_file">Crear Archivo</string>

    <string name="title_login">Login</string>

    <string name="hint_email">Ingresa tu correo electrónico</string>

    <string name="lbl_login">Iniciar sesión</string>

    <string name="lbl_delete_history">¿Está seguro qué desea eliminar el historial?</string>

    <string name="but_ok">Si</string>
    <string name="but_not">No</string>

    <string name="error_email">Debe ingresar un correo electrónico con formato valido.</string>
</resources>
